--- a/art-class-model.ipynb
+++ b/art-class-model.ipynb
@@ -31,15 +31,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hide_output\n",
-    "learn = load_learner('export.pkl')\n",
+    "path = Path()\n",
+    "learn = load_learner(path/'export.pkl')\n",
     "btn_upload = widgets.FileUpload()\n",
     "out_pl = widgets.Output()\n",
-    "lbl_pred = widgets.Label()"
+    "lbl_pred = widgets.Label()\n",
+    "btn_run = widgets.Button(description='Classify')"
    ]
   },
   {
@@ -48,12 +49,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def on_click_classifychange():\n",
+    "def on_click_classify():\n",
     "    img = PILImage.create(btn_upload.data[-1])\n",
     "    out_pl.clear_output()\n",
     "    with out_pl: display(img.to_thumb(128, 128))\n",
     "    pred, pred_idx, probs = learn.predict(img)\n",
-    "    lbl_pred.value = f'Prediction: {pred}; Probability: {probs[pred_idx]:.04f}'\n"
+    "    lbl_pred.value = f'Prediction: {pred}; Probability: {probs[pred_idx]:.04f}'"
    ]
   },
   {
@@ -62,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "btn_run = widgets.Button(description='Classify')"
+    "btn_run.on_click(on_click_classify)"
    ]
   },
   {
@@ -89,13 +90,6 @@
     "VBox([widgets.Label('Upload Painting'),\n",
     "     btn_upload, btn_run, out_pl, lbl_pred])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
