notebook fixed func inputs

--- a/art-class-model.ipynb
+++ b/art-class-model.ipynb
@@ -35,8 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = Path()\n",
-    "learn = load_learner(path/'export.pkl')\n",
+    "learn = load_learner('export.pkl')\n",
     "btn_upload = widgets.FileUpload()\n",
     "out_pl = widgets.Output()\n",
     "lbl_pred = widgets.Label()\n",
@@ -49,20 +48,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def on_click_classify():\n",
+    "def on_click_classify(change):\n",
     "    img = PILImage.create(btn_upload.data[-1])\n",
     "    out_pl.clear_output()\n",
     "    with out_pl: display(img.to_thumb(128, 128))\n",
     "    pred, pred_idx, probs = learn.predict(img)\n",
-    "    lbl_pred.value = f'Prediction: {pred}; Probability: {probs[pred_idx]:.04f}'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    lbl_pred.value = f'Prediction: {pred}; Probability: {probs[pred_idx]:.04f}'\n",
     "btn_run.on_click(on_click_classify)"
    ]
   },
@@ -75,6 +66,13 @@
     "VBox([widgets.Label('Upload Painting'),\n",
     "     btn_upload, btn_run, out_pl, lbl_pred])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
